force-app/main/default/objects/ccrz__E_Product__c/ccrz__E_Product__c.object-meta.xml
<CustomObject>
    <description>e-Commerce Product Master</description>
    <label>CC Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>