force-app/main/default/objects/ccrz__E_Product__c/fields/Biocide_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Biocide_Disclaimer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Biocide Disclaimer</description>
    <inlineHelpText>Biocide Disclaimer</inlineHelpText>
    <label>Biocide Disclaimer</label>
    <type>Checkbox</type>
</CustomField>