force-app/main/default/objects/ccrz__E_Product__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA Institutional</fullName>
            </value>
            <value>
                <fullName>NA PureForce</fullName>
            </value>
            <value>
                <fullName>Ecolab NA DSE</fullName>
            </value>
            <value>
                <fullName>NA Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Nalco Water</fullName>
            </value>
            <value>
                <fullName>Ecolab NA EGV Equip Design</fullName>
            </value>
            <value>
                <fullName>EU Institutional</fullName>
            </value>
            <value>
                <fullName>Food Retail</fullName>
            </value>
            <value>
                <fullName>NA Healthcare</fullName>
            </value>
            <value>
                <fullName>NA Textile Care</fullName>
            </value>
            <value>
                <fullName>Ecolab NA F&amp;B Eng Beloit</fullName>
            </value>
            <value>
                <fullName>Ecolab NA F&amp;B Equip Design</fullName>
            </value>
            <value>
                <fullName>Ecolab NA Kay Equip Design</fullName>
            </value>
            <value>
                <fullName>INTL Institutional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>