force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__AlternateName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AlternateName__c</fullName>
    <inlineHelpText>If Alternate Name is not empty - will be used for product name.</inlineHelpText>
    <label>Alternate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>