force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__AvailabilityMessage__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AvailabilityMessage__c</fullName>
    <description>Message corresponding to the availability of the product. This would contain a message such as &quot;Available&quot; or &quot;Limited&quot;</description>
    <label>Availability Message</label>
    <length>85</length>
    <type>Text</type>
</CustomField>