force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__AvailabilityMessageRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AvailabilityMessageRT__c</fullName>
    <description>Rich Text Field for Message corresponding to the availability of the product. This would contain a message such as &quot;Available&quot; or &quot;Limited&quot;</description>
    <label>Availability Message RT</label>
    <length>256</length>
    <type>Html</type>
</CustomField>