force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__AverageRating__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AverageRating__c</fullName>
    <description>Formula field - average product rating for this product</description>
    <formula>IF(ccrz__NumberOfReviews__c &gt; 0, ccrz__TotalRating__c / ccrz__NumberOfReviews__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>