force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__DryiceFlag__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DryiceFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dry Ice Requirement.</description>
    <label>Dryice Flag</label>
    <type>Checkbox</type>
</CustomField>