force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__DryiceWeight__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DryiceWeight__c</fullName>
    <description>Dry Ice weight required.</description>
    <label>Dryice Weight</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>