force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__FilterData__c.field-meta.xml
<CustomField>
    <fullName>ccrz__FilterData__c</fullName>
    <description>The combination of the product spec key and spec values into single text field value. The Filter Data field is auto-populated when the Product Spec Index is refreshed.</description>
    <inlineHelpText>The combination of the product spec key and spec values into single text field value. The Filter Data field is auto-populated when the Product Spec Index is refreshed.</inlineHelpText>
    <label>Filter Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>