force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__GroundFlag__c.field-meta.xml
<CustomField>
    <fullName>ccrz__GroundFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ground Shipping Requirement</description>
    <label>Ground Flag</label>
    <type>Checkbox</type>
</CustomField>