force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__HazardousFlag__c.field-meta.xml
<CustomField>
    <fullName>ccrz__HazardousFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product is Hazardous.</description>
    <label>Hazardous Flag</label>
    <type>Checkbox</type>
</CustomField>