force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__HazardousOutside48Flag__c.field-meta.xml
<CustomField>
    <fullName>ccrz__HazardousOutside48Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product is Hazardous, when shipped outside the continental US of 48 states.</description>
    <label>Hazardous Outside48 Flag</label>
    <type>Checkbox</type>
</CustomField>