force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__Industry__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Industry__c</fullName>
    <description>Industry to which this product belongs. Editable list of values. Note that this field is not currently used or displaying in B2B Commerce</description>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>DOD</fullName>
            </value>
            <value>
                <fullName>DOE</fullName>
            </value>
            <value>
                <fullName>Electric Utility</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Hydro Energy</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Maritime</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Nuclear Energy</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Pulp &amp; Paper</fullName>
            </value>
            <value>
                <fullName>Railroad</fullName>
            </value>
            <value>
                <fullName>Shipbuilding</fullName>
            </value>
            <value>
                <fullName>Telecommunication</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Wind Energy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>