force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__Is_Subscription_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Is_Subscription_Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if this product is a subscription and is set to auto renew.  Set to false if otherwise.</description>
    <inlineHelpText>Set to true if this product is a subscription and is set to auto renew.  Set to false if otherwise.</inlineHelpText>
    <label>Is Subscription Auto Renewal</label>
    <type>Checkbox</type>
</CustomField>