force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__Is_Subscription_Only__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Is_Subscription_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether this product is only available as a subscription</description>
    <inlineHelpText>Determines whether this product is only available as a subscription</inlineHelpText>
    <label>Is Subscription Only</label>
    <type>Checkbox</type>
</CustomField>