force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__LeadTime__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LeadTime__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Delivery Lead time for the product</description>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>