force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__NumberOfReviews__c.field-meta.xml
<CustomField>
    <fullName>ccrz__NumberOfReviews__c</fullName>
    <description>Formula - number of reviews submitted for this product</description>
    <label>Number Of Reviews</label>
    <summaryFilterItems>
        <field>ccrz__E_Review__c.ccrz__Rating__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ccrz__E_Review__c.ccrz__Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>ccrz__E_Review__c.ccrz__Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>