force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__OvernightFlag__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OvernightFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Overnight Shipping Requirement.</description>
    <label>Overnight Flag</label>
    <type>Checkbox</type>
</CustomField>