force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__ParentProduct__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ParentProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to tie multiple products together where the parent product has most of its attributes set, and the child product inherits those</description>
    <label>Parent Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipName>E_Products</relationshipName>
    <type>Lookup</type>
</CustomField>