force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__PortalSiteURL__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PortalSiteURL__c</fullName>
    <description>Formula field - utility field to allow admins to view the product detail page for this product</description>
    <formula>HYPERLINK(&quot;/apex/ccrz__ProductDetails?viewState=DetailView&amp;prev=errdlog&amp;sku=&quot; + ccrz__SKU__c, &quot;Product Detail View&quot;)</formula>
    <label>View In Portal Site</label>
    <type>Text</type>
</CustomField>