force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__ProductIndexStatus__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductIndexStatus__c</fullName>
    <description>Indicates the status of the associated Product Index records. Possible values are Current, Not Current and Pending. This field is primarily used by the Product Index batch process.</description>
    <inlineHelpText>Indicates the status of the associated Product Index records. Possible values are Current, Not Current and Pending. This field is primarily used by the Product Index batch process.</inlineHelpText>
    <label>Product Index Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>