force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__ProductStatus__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductStatus__c</fullName>
    <description>The status of the product. In Creation - Newly created product, that still requires augmentation and is not visible on the site; Blocked - product has been blocked from being displayed on the site; Not Orderable - product can be viewed, but cannot be added to a cart or ordered; Released - fully availble product</description>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Not Orderable</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>In Creation</fullName>
                <default>true</default>
                <label>In Creation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>