force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__ProductWeight__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductWeight__c</fullName>
    <description>Weight of the product - used as a shipping parameter</description>
    <label>Product Weight</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>