force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__Quantityperunit__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Quantityperunit__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of items that come in one order-able unit</description>
    <label>Quantityperunit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>