force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__RequiredItemDialogText__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RequiredItemDialogText__c</fullName>
    <description>The text to be displayed in the dialog that shows when a user adds this item to the cart if there are any required items for this product.</description>
    <inlineHelpText>The text to be displayed in the dialog that shows when a user adds this item to the cart if there are any required items for this product.</inlineHelpText>
    <label>Required Item Dialog Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>