force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__SEOKeywords__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SEOKeywords__c</fullName>
    <description>Text used within meta tags on the product detail page to help drive search engine optimization</description>
    <label>SEO Keywords</label>
    <length>150</length>
    <type>Text</type>
</CustomField>