force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__SEOTitle__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SEOTitle__c</fullName>
    <description>Text used within meta tags on the product detail page to help drive search engine optimization</description>
    <label>SEO Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>