force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__ShippedIndividually__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShippedIndividually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for the products which should be shipped individually from other products from the same cart.</description>
    <label>Shipped Individually</label>
    <type>Checkbox</type>
</CustomField>