force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__ShippingWeight__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShippingWeight__c</fullName>
    <description>Overall shipping weight, including packaging, of the product - used as a shipping parameter</description>
    <inlineHelpText>This is required for B2B Commerce to be able to show shipping options (Fedex) to the purchasing user.</inlineHelpText>
    <label>Shipping Weight(lbs)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>