force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__ShipSeparately__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShipSeparately__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this item must be shipped separately - not currently sued within the system</description>
    <label>Ship Separately</label>
    <type>Checkbox</type>
</CustomField>