force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__ShortDesc__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShortDesc__c</fullName>
    <description>Product short description</description>
    <label>ShortDesc</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>