force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__ShortDescRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShortDescRT__c</fullName>
    <description>Rich text field for the Short Description</description>
    <label>ShortDescRT</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>