force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__Storefront__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Storefront__c</fullName>
    <description>Mulit-select list that allows you to assign the product to one or more storefronts.</description>
    <label>Storefront</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DefaultStore</fullName>
                <default>true</default>
                <label>DefaultStore</label>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>