force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__Subscription_Duration__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Subscription_Duration__c</fullName>
    <description>Duration of the subscription of this product in months.  Acts as a static duration.  If the user is unable to select a duration on the cart / product detail page, then B2B Commerce uses this field to determine how long a subscription lasts.</description>
    <inlineHelpText>Duration of the subscription of this product in months.  Acts as a static duration.  If the user is unable to select a duration on the cart / product detail page, then B2B Commerce uses this field to determine how long a subscription lasts.</inlineHelpText>
    <label>Subscription Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>