force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__Subscription_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Subscription_Frequency__c</fullName>
    <description>Determines the frequency of orders placed for any order items of this product in days.  (7 = Weekly, 14 = bi-weekly, 30 = monthly, 60 = bi-monthly, 365 = annually)</description>
    <inlineHelpText>Determines the frequency of orders placed for any order items of this product in days.  (7 = Weekly, 14 = bi-weekly, 30 = monthly, 60 = bi-monthly, 365 = annually)</inlineHelpText>
    <label>Subscription Frequency</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>