force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__Taxable__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field determines if the product is taxable or not.</description>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>