force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__TaxRateId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TaxRateId__c</fullName>
    <label>Tax Rate Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>