force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__TotalRating__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TotalRating__c</fullName>
    <description>Formula field - total rating for this product from the product reviews</description>
    <label>Total Rating</label>
    <summarizedField>ccrz__E_Review__c.ccrz__Rating__c</summarizedField>
    <summaryFilterItems>
        <field>ccrz__E_Review__c.ccrz__Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>ccrz__E_Review__c.ccrz__Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>